# hybrid-ai-agent

./: .env.example  .gitignore  BACKLOG.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
config/: allowed_commands.yml  blocked_patterns.yml  routing_rules.yml
src/: __init__.py  main.py
src/agent/: background.py  graph.py  memory.py  scanner.py  tool_executor.py  tool_interface.py
src/models/: __init__.py  claude_client.py  health_checker.py  model_resolver.py  ollama_client.py  pending_queue.py
src/router/: rule_router.py
src/security/: audit.py  permissions.py  sanitizer.py
src/tools/: __init__.py  file_ops.py  git_branch.py  git_ops.py  shell_exec.py
tests/: test_auto_approve.py  test_background.py  test_git_branch.py  test_integration.py  test_memory.py  test_permissions.py  test_persistent_memory.py  test_router.py  test_sanitizer.py  test_scanner.py  test_security.py  test_tool_executor.py  test_tool_interface.py
